src/widgets/snapshots/tvision__widgets__button__tests__snapshot_hotkey_title.snap
---
source: src/widgets/button.rs
expression: render(&mut b)
---
size: 12x2
cursor: hidden
text:
|   Cancel  ▄|
|  ▀▀▀▀▀▀▀▀▀▀|
attr:
|abbcbbbbbbba|
|aaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(8) bg=BIOS(0)
  b fg=BIOS(0) bg=BIOS(2)
  c fg=BIOS(14) bg=BIOS(2)
