src/widgets/snapshots/tvision__widgets__button__tests__snapshot_left_justified.snap
---
source: src/widgets/button.rs
expression: render(&mut b)
---
size: 16x2
cursor: hidden
text:
|  Save         ▄|
|  ▀▀▀▀▀▀▀▀▀▀▀▀▀▀|
attr:
|abbbbbbbbbbbbbba|
|aaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(8) bg=BIOS(0)
  b fg=BIOS(0) bg=BIOS(2)
