src/widgets/snapshots/tvision__widgets__button__tests__snapshot_selected_active.snap
---
source: src/widgets/button.rs
expression: render(&mut b)
---
size: 10x2
cursor: hidden
text:
|    OK   ▄|
|  ▀▀▀▀▀▀▀▀|
attr:
|abbbbbbbba|
|aaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
  b fg=RGB(255,255,255) bg=RGB(0,170,0)
